--- a/.ide/.ide.yaml
+++ b/.ide/.ide.yaml
@@ -37,8 +37,7 @@ workspace:
         - gva-mysql
         - gva-redis
       networks:
-        go-dev-network:
-          ipv4_address: 177.7.0.12
+        - go-dev-network
 
     web-dev:
       container_name: web-dev
@@ -59,8 +58,7 @@ workspace:
       links:
         - server-dev
       networks:
-        go-dev-network:
-          ipv4_address: 177.7.0.11
+        - go-dev-network
 
   gva-mysql:
     image: mysql:8.0.21
@@ -75,8 +73,7 @@ workspace:
       MYSQL_DATABASE: "qmPlus" # 初始化启动时要创建的数据库的名称
       MYSQL_ROOT_PASSWORD: "Aa@6447985" # root管理员用户密码
     networks:
-      go-dev-network:
-        ipv4_address: 177.7.0.13
+      - go-dev-network
 
     phpmyadmin:
       container_name: phpmyadmin
@@ -89,8 +86,7 @@ workspace:
       environment:
         PMA_ARBITRARY: "1"
       networks:
-        go-dev-network:
-          ipv4_address: 177.7.0.15
+        - go-dev-network
 
   gva-redis:
     image: redis:6.0.6
@@ -101,12 +97,8 @@ workspace:
     ports:
       - "16379:6379"
     networks:
-      go-dev-network:
-        ipv4_address: 177.7.0.14
+      - go-dev-network
 
-networks:
-  go-dev-network:
-    ipam:
-      driver: default
-      config:
-        - subnet: "177.7.0.0/16"
+  networks:
+    go-dev-network:
+      external: true
