--- a/.ide/.ide.yaml
+++ b/.ide/.ide.yaml
@@ -63,7 +63,10 @@ workspace:
     gva-mysql:
       image: mysql:8.0.21
       container_name: gva-mysql
-      command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci #设置utf8字符集
+      command: 
+        - --default-authentication-plugin=mysql_native_password
+        - --character-set-server=utf8mb4
+        - --collation-server=utf8mb4_unicode_ci
       restart: always
       ports:
         - "13306:3306" # host物理直接映射端口为13306
