--- a/.ide/.ide.yaml
+++ b/.ide/.ide.yaml
@@ -61,7 +61,7 @@ workspace:
       networks:
         - go-dev-network
     gva-mysql:
-      image: mysql:8.0.21
+      image: registry.cn-hangzhou.aliyuncs.com/boathouse/mysql:5.6
       container_name: gva-mysql
       command: 
         - --default-authentication-plugin=mysql_native_password
