--- a/.ide/.ide.yaml
+++ b/.ide/.ide.yaml
@@ -10,8 +10,9 @@ workspace:
       webide-port: 6800
       ssh: 6822
       service-api: 8888
-      gva-mysql: 3306
+      gva-mysql: 13306
       phpmyadmin: 8090
+      gva-redis: 16379
       web: 8000
       ideweb: 6808
     ide-type: jb-projector
@@ -51,10 +52,12 @@ workspace:
       expose:
         - 3000
         - 8000
+        - 8080
         - 22
       ports:
         - 6808:3000
         - 8000:8000
+        - 8080:8080
         - 6832:22
       depends_on:
         - server-dev
@@ -63,7 +66,7 @@ workspace:
       networks:
         - go-dev-network
     gva-mysql:
-      image: registry.cn-hangzhou.aliyuncs.com/boathouse/mysql:5.6
+      image: mysql:8.0.21
       container_name: gva-mysql
       command: 
         - --default-authentication-plugin=mysql_native_password
@@ -93,7 +96,7 @@ workspace:
         - go-dev-network
     gva-redis:
       image: redis:6.0.6
-      container_name: gva-redis # 容器名
+      container_name: gva-redis
       restart: always
       expose:
         - 6379
